--- a/CSS/sobre.css
+++ b/CSS/sobre.css
@@ -1,37 +1,36 @@
+/*cor-base (body e h2)*/
+/*cor-fundo-img (figure)*/
+/*cor-borda-img (figure)*/
+
 :root{
-    --cor-base: #333;
-    --cor-fundo-img: #f2eded;
-    --cor-borda-img: #ccc;
-    --cor-titulo-especial: #898f95;
-    --cor-rodape: #777;
-}
-body{
-    color: var(--cor-base);
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;  
-    width: 940px;  
-    margin: auto;
+    --cor-base: #000000;
+    --cor-baseh2: #00155c;
+    --cor-fundo-img: #dfdfdf;
+    --cor-borda-img: #4edfff;
+     
 }
 
+body {
+    color: var(--cor-base);
+    font-family: "lucida Sans Unicode", "Lucida Grande", sans-serif ;
+    font-family: "Merriweather", serif;
+}
 h1{
-    background-image: url(../img/sobre-background.jpg);
+    background-image: url(../IMG/sobre.jfif);
     padding: 10px;
 }
-
 h2{
-    border-bottom: 2px groove var(--cor-base); 
-    margin-top: 30px;   
+    color:var(--cor-baseh2);
+    border-bottom: 2px groove #850000;
+    margin-top: 30px;
 }
-
 figure{
-    background-color: var(--cor-fundo-img);
-    border: 1px solid var(--cor-borda-img);
-    text-align: center;
+    border: 1px solid #000000;
     padding: 15px;
     margin: 30px;
+    background-color: var(--cor-fundo-img);
+    text-align: center;
 }
-
 figcaption{
     font-style: italic;
     margin-top: 10px;
@@ -39,28 +38,33 @@ figcaption{
 
 p{
     padding: 0 45px;
-    text-indent: 25px;
-    text-align: justify;
+    text-indent: 15px;
 }
 
 #centro-distribuicao{
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 550px;
 }
 
-#rodape{
-    color: var(--cor-rodape);
+.rodape{
+    color: #777;
     margin: 30px 0;
     padding: 30px 0;
 }
 
-#rodape img {
+.rodape img {
     margin-right: 30px;
     vertical-align: middle;
     width: 94px;
 }
 
-#familia-pelho{
-    margin: 0 0 10px 10px;
+#familia-pelho {
     float: right;
+    margin: 0 0 10px 10px;
+}
+
+.container{
+    margin: 0 auto;
+    width: 90%;
 }
