--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -1,65 +1,73 @@
-.grid-container{
-    display: grid;
+.grid-container {
+    display:  grid;
     grid-template-columns: auto;
     gap: 10px;
-
 }
 
-body{
+body {
     width: 60%;
     margin: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-fieldset{
+fieldset { 
     margin-bottom: 10px;
-    background-color: rgb(206, 206, 206);
-    border-radius: 5px;
+    background-color: antiquewhite;
+    border-radius: 10px;
 }
 
-fieldset input, select{
+fieldset input, select {
     font-size: medium;
 }
 
-fieldset legend{
+fieldset legend {
     font-weight: bold;
 }
 
-.grid-button-container{
+.grid-button-container {
     display: grid;
     grid-template-columns: auto auto;
     margin: 5px 0;
 }
 
-.grid-button-container input{
+.grid-button-container input {
     font-size: large;
     font-weight: bold;
     color: white;
-    border-radius: 5px;
-    padding: 5px; 
+    border-radius: 10px;
+    padding: 5px;
+
 }
 
-.grid-button-container input[type=submit]{
-    background-color: steelblue;
+.grid-button-container input[type=submit] {
+
+    background-color: blue;
+
 }
 
-.grid-button-container input[type=reset]{
-    background-color: coral;
+.grid-button-container input[type=reset] {
+
+    background-color: orangered;
+
 }
 
-.grid-header-container{
+.grid-header-container {
     display: grid;
     grid-template-areas: 'top-left top-right';
-    border-bottom: rgb(206, 206, 206) 5px solid;
+    border-bottom: rgb(165, 155, 141) 5px solid;
     margin-bottom: 5px;
+    
+
 }
 
-.top-right{
+.top-right {
     grid-area: top-right;
     justify-self: right;
 }
 
-.top-left{
+.top-left {
     grid-area: top-left;
 
 }
+
+
