--- a/CSS/sobre.css
+++ b/CSS/sobre.css
@@ -1,70 +1,81 @@
-/*cor-base (body e h2)*/
-/*cor-fundo-img (figure)*/
-/*cor-borda-img (figure)*/
 
 :root{
-    --cor-base: #000000;
-    --cor-baseh2: #00155c;
-    --cor-fundo-img: #dfdfdf;
-    --cor-borda-img: #4edfff;
-     
+   --cor-base: #333;
+   --cor-fundo-img:#f2eded;
+   --cor-borda-img: #ccc;
+   --cor-titulo-especial:#8a8686cc;
+   --cor-rodape:#777;
+}
+body {
+   color: var(--cor-base);
+   font-family: "Montserrat", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 400;
+   font-style: normal;
+  
 }
 
-body {
-    color: var(--cor-base);
-    font-family: "lucida Sans Unicode", "Lucida Grande", sans-serif ;
-    font-family: "Merriweather", serif;
+h1 {
+   background-image: url(../img/sobre-background.jpg);
+   padding: 10px;
 }
-h1{
-    background-image: url(../IMG/sobre.jfif);
-    padding: 10px;
+
+h2 {
+   border-bottom: 2px groove var(--cor-base);
+   margin-top: 30px;
 }
-h2{
-    color:var(--cor-baseh2);
-    border-bottom: 2px groove #850000;
-    margin-top: 30px;
+
+figure {
+   background-color: var(--cor-fundo-img);
+   border: 1px solid var(--cor-borda-img);
+   text-align: center;
+   padding: 15px;
+   margin: 30px;
 }
-figure{
-    border: 1px solid #000000;
-    padding: 15px;
-    margin: 30px;
-    background-color: var(--cor-fundo-img);
-    text-align: center;
-}
-figcaption{
-    font-style: italic;
-    margin-top: 10px;
+
+figcaption {
+   font-style: italic;
+   margin-top: 10px;
 }
 
 p{
-    padding: 0 45px;
-    text-indent: 15px;
+   padding: 0 45px;
+   text-indent: 15px;
+   text-align: justify;
+
+}
+
+#diferenciais{
+   text-align: center;
+   color:var(--cor-titulo-especial);
+   padding-top: 60px;
 }
 
 #centro-distribuicao{
-    margin-left: auto;
-    margin-right: auto;
-    width: 550px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 550px;
 }
 
 .rodape{
-    color: #777;
-    margin: 30px 0;
-    padding: 30px 0;
+   color: var(--cor-rodape);
+   margin: 30px 0;
+   padding: 30px 0;
 }
 
-.rodape img {
-    margin-right: 30px;
-    vertical-align: middle;
-    width: 94px;
+.rodape img{
+   margin-right: 30px;
+   vertical-align: middle;
+   width: 94px;
 }
 
-#familia-pelho {
-    float: right;
-    margin: 0 0 10px 10px;
+#familia-pelho{
+   float: right;
+   margin: 0 0 10px 10px;
 }
 
-.container{
-    margin: 0 auto;
-    width: 90%;
+.container {
+   margin: 0 auto;
+   width: 85%;
+
 }
