--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,27 +1,234 @@
-div{
-    width: 100px;
-    height: 100px;
-    border: 1px solid #000;
-    margin-bottom: 5px;
-}
-
-.amarelo{
-    background-color: yellow;
-}
-
-.vermelho{
-    background-color: red;
-}
-
-.azul{
-    background-color: blue;
+:root {
+    --cor-base: #333;
+    --cor-menu: #036;
+    --cor-menu-lateral: #dcdcdc;
+    --cor-menu-lateral-itens: white;
+    --cor-menu-lateral-itens-hover: #007dc6;
+    --cor-menu-lateral-itens-active: #f00;
+    --cor-painel-novidades: #f5dcdc;
+    --cor-painel-shadow: #999;
+    --cor-painel-titulo: rgba(0, 0, 0, 0.5);
+    --cor-painel-novidades-grad: #bebef4;
+    --cor-panel-mais-vendidos: #dcdcf5;
+    --cor-panel-mais-vendidos-grad: #f4bebe;
 
 }
 
-.verde{
-    background-color: green;
+.sacola {
+    background: url(img/sacola.png) no-repeat top right;
+    font-size: 14px;
+    padding-right: 35px;
+    padding-top: 8px;
+    text-align: center;
+    width: 200px;
+    padding-bottom: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
-.fonte-clara{
-    color: white;
+.menu-opcoes {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.menu-opcoes ul {
+    font-size: 15px;
+}
+
+.menu-opcoes a {
+    color: var(--cor-menu);
+}
+
+.menu-opcoes ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+body {
+    color: var(--cor-base);
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+}
+
+.container {
+    margin: 0 auto;
+    width: 940px;
+}
+
+header {
+    position: relative;
+}
+
+.busca,
+.menu-departamentos {
+    background-color: var(--cor-menu-lateral);
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 10px;
+    width: 230px;
+    float: left;
+}
+
+.menu-departamentos {
+    margin-top: 10px;
+    padding-bottom: 10px;
+    clear: left;
+}
+
+.busca form,
+.menu-departamentos h2 {
+    margin: 10px;
+}
+
+.menu-departamentos li {
+    background-color: var(--cor-menu-lateral-itens);
+    margin-bottom: 1px;
+    padding: 5px 10px;
+}
+
+.menu-departamentos a {
+    color: var(--cor-base);
+    text-decoration: none;
+}
+
+.busca input {
+    vertical-align: middle;
+}
+
+.busca input [type="search"] {
+    width: 170px;
+}
+
+.destaque {
+    margin-top: 10px;
+}
+
+.painel {
+    margin: 10px 0;
+    padding: 10px;
+    width: 445px;
+    border-radius: 10px;
+    box-shadow: inset 1px 1px 4px var(--cor-painel-shadow);
+}
+
+.novidades {
+    float: left;
+}
+
+.mais-vendidos {
+    float: right;
+}
+
+.painel h2 {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    text-shadow: 3px 3px 2px var(--cor-painel-titulo);
+}
+
+.painel a {
+    color: var(--cor-base);
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.novidades {
+    background: linear-gradient(var(--cor-painel-novidades), var(--cor-painel-novidades-grad));
+}
+
+.mais-vendidos {
+    background: linear-gradient(var(--cor-panel-mais-vendidos), var(--cor-panel-mais-vendidos-grad));
+}
+
+.painel li {
+    display: inline-block;
+    vertical-align: top;
+    width: 130px;
+    margin: 2px;
+    padding-bottom: 10px;
+}
+
+footer {
+    background-image: url(../img/fundo-rodape.png);
+    clear: both;
+    padding: 20px 0;
+    position: relative;
+}
+
+.social a{
+    height: 32px;
+    width: 32px;
+    display: block;
+    text-indent: -9999px;
+}
+
+.social a[href*="facebook.com"] {
+    background-image: url(../img/facebook.png);
+}
+
+
+.social a[href*="twitter.com"] {
+    background-image: url(../img/twitter.png);
+}
+
+.social a[href*="googleplus.com"] {
+    background-image: url(../img/googleplus.png);
+}
+
+.social li {
+float: left;
+margin-left: 25px;
+}
+
+.social {
+    position: absolute;
+    top: 12px;
+    right: 0;
+}
+
+.menu-opcoes a:hover {
+    color: var(--cor-menu-lateral-itens-hover);
+}
+
+.menu-opcoes a:active {
+    color: var(--cor-menu-lateral-itens-active);
+}
+
+.menu-departamentos li ul {
+    display: none;
+}
+
+.menu-departamentos li:hover ul {
+    display: block;
+}
+
+.menu-departamentos ul ul li {
+    background-color: var(--cor-menu-lateral);
+}
+
+.menu-departamentos li li a::before {
+    content: '- ';
+}
+
+.painel li:hover{
+    background-color: rgba(255,255,255, 0.8);
+    box-shadow: 0 0 5px #333;
+    transition: 0.7s ease-in;
+    transform: scale(1.2) rotate(-5deg); 
+}
+
+.painel li:nth-child(2n):hover {
+    transform: scale(1.2) rotate(5deg);
+}
+
+.painel li {
+    display: inline-block;
+    vertical-align: top;
+    width: 130px;
+    margin: 2px;
+    padding-bottom: 10px;
+    transition: 0.7s ease-out;
 }
