--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -1,14 +1,16 @@
-h1 {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: italic;
+h1{
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;  
+    font-size: 40px;
 }
 
-
-p {
+p{
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
-    font-style: normal;
-    font-size: 20px;
+    font-style: normal;   
+    font-size: 12px;
+    text-align: justify;
 }
